Update strings.xml (ptbr)

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -350,8 +350,10 @@
   <string name="idepref_useIcu_title">Use a biblioteca ICU</string>
   <string name="idepref_useIcu_summary">Use a biblioteca ICU para usar bordas de palavras de recuperação para seleção de palavras de toque duplo e pressionamento longo.</string>
 
-    <!--The text sorrounded with '@@' is spanned as clickable.-->
-    <!--There must be exactly two '@@' sorrounding the text that should be clickable.-->
-    <string name="msg_swipe_for_files">Deslize à esquerda para @@arquivos@@.</string>
-    <string name="msg_swipe_for_output">Deslize à cima para @@Saída de compilação@@.</string>
+  <!--The text sorrounded with '@@' is spanned as clickable.-->
+  <!--There must be exactly two '@@' sorrounding the text that should be clickable.-->
+  <string name="msg_swipe_for_files">Deslize à esquerda para @@arquivos@@.</string>
+  <string name="msg_swipe_for_output">Deslize à cima para @@logs de compilação@@.</string>
+  <string name="idepref_editor_useSoftTabs_title">Usar soft tab</string>
+  <string name="idepref_editor_useSoftTabs_summary">Escolha se deseja usar espaços em vez de caracteres de tabulação (\\t).</string>
 </resources>
