Added new german translations

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
-    <string name="title_gradle_service_notification_channel">AndroidIDE Gradle build service</string>
+    <string name="title_gradle_service_notification_channel" translatable="false">AndroidIDE Gradle build service</string>
     <string name="msg_hex_color_code">Hex color code</string>
     <string name="msg_color_picker_pick">Pick</string>
     <string name="msg_chmod_exec">Setting executable permissions…</string>
