--- a/common/src/main/res/values-de/strings.xml
+++ b/common/src/main/res/values-de/strings.xml
@@ -4,4 +4,11 @@
     <string name="msg_chmod_exec">Ausführbare Berechtigungen festlegen…</string>
     <string name="msg_linking">Verlinken von %1$s zu %2$s</string>
     <string name="msg_extracting_hooks">Hook-Bibliotheken extrahieren…</string>
+    <string name="msg_empty_package">Paketname ist leer</string>
+    <string name="msg_package_is_not_valid">Der Paketname ist nicht zulässig</string>
+    <string name="msg_package_is_to_long">Der Paketname ist zu lang</string>
+    <string name="msg_package_not_valid_char_1">Das \'_\' kann nicht das erste Zeichen im Paketname sein</string>
+    <string name="msg_package_not_use_digit_first">Eine Nummer kann nicht das erste Zeichen in einem Paketnamen sein</string>
+    <string name="msg_package_not_valid_char_2">Das Zeichen %1$s ist nicht erlaubt in Android Paketnamen</string>
+    <string name="msg_package_mus_have_dot">Der Paketname muss mindestens ein \'.\' als Seperator haben</string>
 </resources>
