--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,8 @@
   <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">Native C++</string>
   <string name="template_cpp_description">Creates a new project with an Empty Activity configured to use JNI</string>
+  <string name="template_no_activity">No Activity</string>
+  <string name="template_no_activity_description">Creates a new project without activity</string>
 
   <!-- Files -->
   <string name="save">Save</string>
