Fix typo in changelog draft

--- a/changelogs/v2.1.2-beta.md
+++ b/changelogs/v2.1.2-beta.md
@@ -56,5 +56,5 @@ Following issues have been fixed in this release :
 - 'Preview layout' item now has more priority than other options menu icons (#243).
 - Do not show editor actions window when in search mode.
 - Updated Hindi translations. By @Premjit-Chowdhury (#443).
-- Updated Russian translations. By @AndreyKozhev (@237, #292, #363, #395).
+- Updated Russian translations. By @AndreyKozhev (#237, #292, #363, #395).
 - Updated Portuguese translations. By @MatheusTGamerPro (#286) and @FrioGitHub (#398).
