--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_open_source_licenses">Open-Source-Lizenzen</string>
     <string name="msg_about_licensed_under">Lizenziert unter:</string>
     <string name="about_option_email">Email</string>
-    <string name="about_option_website">Webseite</string>
+    <string name="about_option_website">Internetseite</string>
     <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
     <string name="about_footer">AndroidIDE %1$s f&#xFC;r %2$s</string>
     <string name="about_subtitle">Die IDE f&#xFC;r Android Ger&#xE4;te</string>
@@ -48,13 +48,13 @@
     <string name="title_device_not_supported">Ger&#xE4;t nicht unterst&#xFC;tzt</string>
     <string name="msg_device_not_supported">Leider wird Ihr Ger&#xE4;t derzeit nicht unterst&#xFC;tzt. Wir entschuldigen uns f&#xFC;r die Unannehmlichkeiten.\n\nUnterst&#xFC;tzte CPU-ABIs: aarch64 und armeabi-v7a</string>
     <!-- Project Builder -->
-    <string name="lint">Fussel</string>
+    <string name="lint">Lint</string>
     <string name="lint_debug">lintDebug</string>
     <string name="lint_release">lintRelease</string>
     <string name="build">Bauen</string>
     <string name="build_debug">AssembleDebug</string>
-    <string name="build_output">Ausgabe erstellen</string>
-    <string name="build_release">montierenRelease</string>
+    <string name="build_output">Build output</string>
+    <string name="build_release">assembleRelease</string>
     <string name="lint_tasks">Lint-Aufgaben</string>
     <string name="clean_amp_build">Clean &amp; build</string>
     <string name="clean_project">S&#xE4;ubern</string>
@@ -99,6 +99,11 @@
     <string name="template_empty">Leeres Projekt</string>
     <string name="template_navigation_drawer">Projekt mit NavigationDrawer</string>
     <!-- Files -->
+    <string name="template_libgdx">LibGDX Spiel</string>
+    <string name="template_description_libgdx">LibGDX-Spieleprojekt eingerichtet, um ein Bild als Beispiel zu rendern.</string>
+    <string name="template_navigation_tabs_description">Erstellt eine neue Activity mit eine bottom navigation</string>
+    <string name="template_tabs_description">Erstellt eine neue leere Activity mit Tabs</string>
+    <string name="template_cpp_description">Erstellt ein neues Projekt mit einer leeren Activity konfiguriert um JNI zu benutzen</string>
     <string name="save">Speichern</string>
     <string name="menu_find">Finden</string>
     <string name="menu_find_file">In Datei suchen</string>
@@ -133,6 +138,7 @@
     <string name="file_name">Dateinamen</string>
     <string name="new_name">Neuer Name</string>
     <string name="new_file">Neue Datei</string>
+    <string name="create_auto_layout">Layout Datei automatisch erstellen</string>
     <string name="new_java_class">Neue Java-Klasse</string>
     <string name="new_xml_resource">Neue XML-Ressource</string>
     <string name="new_folder">Neuer Ordner</string>
@@ -166,10 +172,11 @@
     <string name="msg_storage_denied">Ohne die Speicherberechtigung kann nicht fortgefahren werden</string>
     <string name="msg_storage_granted">Speicherberechtigung erteilt!</string>
     <!-- Code Editor -->
+    <string name="open_with">Öffnen mit...</string>
     <string name="undo">R&#xFC;ckg&#xE4;ngig machen</string>
     <string name="redo">Wiederholen</string>
-    <item name="copy" type="string" tools:override="true">Copy</item>
-    <item name="text_to_search" type="string">Text to search</item>
+    <item name="copy" type="string" tools:override="true">Kopieren</item>
+    <item name="text_to_search" type="string">Text zum suchen</item>
     <!-- Preferences -->
     <string name="title_change_text_size">Editor Schriftgr&#xF6;&#xDF;e</string>
     <string name="idepref_about_title">&#xDC;ber AndroidIDE</string>
@@ -183,6 +190,9 @@
     <string name="idepref_editor_paintingflags_summary">W&#xE4;hlen Sie aus, welche nicht anzeigbaren Zeichen vom Editor gezeichnet werden sollen</string>
     <string name="idepref_editor_drawhexcolors_title">Farben im Editor anzeigen</string>
     <string name="idepref_editor_drawhexcolors_summary">Soll der Editor Hex-Farbstrings anzeigen?</string>
+    <string name="idepref_editor_use_magnifier_title">Magnifier aktivieren</string>
+    <string name="idepref_editor_word_wrap_summary">Wordwrap des Editor benutzen</string>
+    <string name="idepref_editor_use_magnifier_summary">Vergrößern Sie Text an der Cursorposition, während Sie Text im Editor auswählen</string>
     <string name="idepref_editor_title">Editor</string>
     <string name="idepref_build_title">Build &amp; Run</string>
     <string name="title_open_projects">Letztes Projekt &#xF6;ffnen</string>
@@ -257,6 +267,8 @@
     <string name="action_expand_selection">Auswahl erweitern</string>
     <string name="idepref_java_matchLower_title">Vervollständigungen in Kleinbuchstaben nutzen</string>
     <string name="msg_compiler_module_install">Kompilierer Modul wird installiert, bitte warten&#8230;</string>
+    <string name="idepref_editor_ligatures_title">Schriftartligaturen</string>
+    <string name="idepref_editor_ligatures_summary">Schriftartligaturen aktivieren/deaktivieren</string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
     <string name="msg_viewaction_add_attr">Attribut hinzufügen</string>
@@ -266,10 +278,54 @@
     <string name="title_color_picker">Farbauswahl</string>
     <string name="title_format_code">Code formatieren</string>
     <string name="hint_string_value">String value</string>
-    <string name="hint_string_resource">String resource</string>
-    <string name="hint_resource_reference">Any resource reference</string>
-    <string name="hint_dimension_val">Dimension value</string>
-    <string name="hint_dimension_res">Dimension resource</string>
-    <string name="hint_boolean_res">Boolean resource</string>
     <string name="msg_apk_install_intent_failed">Fehler beim installieren der App</string>
+    <string name="template_def_app_name">Meine App</string>
+    <string name="err_invalid_data_by_intent">Der Intent hat falsche Daten zurückgeliefert</string>
+    <string name="msg_swipe_for_files">Nach Links swipen für @@files@@.</string>
+    <string name="build_status_failed">Build ist fehlgeschlagen. Sieh dir die Ausgabe an für mehr Informationen</string>
+
+    <string name="idepref_java_useGoogleStyle_title">Verwenden Sie die Codeformatierung im Google-Java-Stil</string>
+    <string name="idepref_java_useGoogleStyle_summary">Verwenden Sie die Codeformatierungskonfiguration im Google-Java-Stil zum Formatieren des Java-Quellcodes.</string>
+    <string name="idepref_visiblePassword_title">Sichtbares Passwort-Flag</string>
+    <string name="idepref_visiblePassword_summary">Für sichtbares Passworteingabetyp-Flag im Editor verwenden. Dadurch wird sichergestellt, dass keine Vorschläge per Softkeyboard gemacht werden.</string>
+    <string name="previous">Vorherige</string>
+    <string name="msg_replacing">Ersetzen…</string>
+    <string name="title_gradle_service_notification_ticker">Gradle build service gestartet</string>
+    <string name="msg_gradle_service_notification">AndroidIDE\'s Gradle build service läuft im Hintergrund.</string>
+    <string name="title_cancel_build">Build abbrechen</string>
+    <string name="title_warning">Warnung</string>
+    <string name="msg_ndk_currently_unsupported">NDK ist momentan nicht offiziel unterstützt. Die Vorlage funktioniert erste nach der installation des NDK.</string>
+    <string name="msg_initializing_project">Projekt initialisiert</string>
+    <string name="msg_project_initialized">Project initialized</string>
+    <string name="msg_project_initialization_failed">Initialiserung des Projekts fehlgeschlagen</string>
+    <string name="msg_project_not_initialized">Projekt ist nicht initialisert.</string>
+    <string name="msg_running_task">Laufende Aufgaben: \'%1$s\'</string>
+    <string name="msg_replacement">Ersetzen</string>
+    <string name="title_sync_project">Projekt synchronisieren</string>
+    <string name="wizard_error_name_empty">Der Name kann nicht leer sein.</string>
+    <string name="wizard_error_name_illegal">Der Name kann keine verbotenen Zeichen enthalten.</string>
+    <string name="wizard_save_location">Speicherstandort</string>
+    <string name="wizard_language">Sprache des Projekts</string>
+    <string name="wizard_loading">Vorlagen werden geladen…</string>
+    <string name="next">Nächste</string>
+    <string name="exit">Verlassen</string>
+    <string name="idepref_msg_tpFix">Legen Sie LD_PRELOAD auf libhook.so fest, um das Problem mit tag pointes für JDK 11 in Android 11 zu beheben [DEPRECATED - Prefer using JDK 17].</string>
+    <string name="idepref_msg_customGradleInstallation">Geben Sie eine benutzerdefinierte Gradle-Installation an, die für den Build verwendet werden soll. Dies ÜBERSCHREIBT die in gradle-wrapper.properties angegebene Version</string>
+    <string name="msg_gradle_installation_path">Gradle installation Pfad</string>
+    <string name="msg_gradle_installation_input_help">Lass dies leer um den Gradle wrapper zu benutzen.</string>
+    <string name="msg_require_install_jdk_and_android_sdk">Sie müssen das JDK und das Android SDK installieren, damit die IDE funktioniert. Um dies zu installieren klick \'Ok\' und folge der Anleitung <![CDATA[ <a href="https://github.com/itsaky/androidide-build-tools#installing-in-androidide">hier</a>]]></string>
+
+    <string name="build_status_idle" translatable="false">Kein Build wird ausgeführt</string>
+    <string name="build_status_in_progress" translatable="false">Build läuft…</string>
+    <string name="build_status_sucess">Build erfolgreich</string>
+    <string name="msg_output_text_extraction_failed">Fehler beim empfangen des Textes vom Editor</string>
+    <string name="msg_select_from_primary_storage">Wählen Sie ein Verzeichnis aus dem Primärspeicher aus</string>
+    <string name="err_authority_not_allowed">Authority \'%s\' ist nicht erlaubt</string>
+    <string name="idepref_useIcu_title">ICU lib benutzen</string>
+
+    <!--The text sorrounded with '@@' is spanned as clickable.-->
+    <!--There must be exactly two '@@' sorrounding the text that should be clickable.-->
+    <string name="msg_swipe_for_output">Swipe nach oben für @@build output@@.</string>
+    <string name="idepref_editor_useSoftTabs_title">Soft tab benutzen</string>
+    <string name="idepref_editor_useSoftTabs_summary">Wählen Sie, ob Leerzeichen anstelle von Tab verwendet werden sollen (\\t).</string>
 </resources>
