--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -21,6 +21,7 @@
     <string name="share_with_friends">বন্ধুদের সাথে শেয়ার করুন</string>
     <string name="ide_preferences">IDE-এর পছন্দ</string>
     <string name="discussions_on_telegram">টেলিগ্রামে আলোচনা</string>
+    <string name="official_tg_channel">অফিসিয়াল টেলিগ্রাম চ্যানেল</string>
     <string name="msg_empty_view">আপনাকে দেখানোর মতো আমার কাছে কিছুই নেই…</string>
     <string name="btn_terminal">টার্মিনাল</string>
     <string name="reset">রিসেট করুন</string>
