--- a/changelogs/v2.1.2-beta.md
+++ b/changelogs/v2.1.2-beta.md
@@ -15,7 +15,8 @@ This release focuses mostly on the LSP implementations.
 - Support for range code formatting. By @AndreyKozhev (#405).
 - You can now choose to open a file with external application. By @AndreyKozhev (#442).
 - Added a preference to toggle usage of soft tabs.
-- Added Bengali translations. By @deepkrg17 (#331, #368).
+- Added a 'No activity' template. By @AndreyKozhev (#462).
+- Added Bengali translations. By @deepkrg17 (#331, #368, #463).
 
 ## Fixes
 
@@ -44,6 +45,8 @@ Following issues have been fixed in this release :
 - Fixed a bug that caused `SymbolInputView` to show nothing. By @AndreyKozhev (#400).
 - Options menu items are not updated in some cases.
 - Options menu items are cleared when a build is in progress and the IDE is minimized.
+- File not saved after returning from UI designer.
+- Improper handling of APK redirect file when installing APK (#470).
 
 ## Improvements
 
@@ -55,6 +58,9 @@ Following issues have been fixed in this release :
 - Use Storage Access Framework (SAF) for picking directories.
 - 'Preview layout' item now has more priority than other options menu icons (#243).
 - Do not show editor actions window when in search mode.
+- Use relative padding in TreeView to support RTL layouts.
+- Updated crash report. By @AndreyKozhev (#460).
+- Updated German translations (#466).
 - Updated Hindi translations. By @Premjit-Chowdhury (#443).
-- Updated Russian translations. By @AndreyKozhev (#237, #292, #363, #395).
+- Updated Russian translations. By @AndreyKozhev (#237, #292, #363, #395, #461).
 - Updated Portuguese translations. By @MatheusTGamerPro (#286) and @FrioGitHub (#398).
