--- a/xml-inflater/src/main/res/values-ar/strings.xml
+++ b/xml-inflater/src/main/res/values-ar/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="msg_cannot_create_view">لا نستطيع صناعة مظهر بالاسم: %s</string>
-    <string name="err_no_attr_adapter">غير قادر على قراءة attributes %s</string>
-    <string المظهر %s غير مدعومة حاليا.</string>
+    <string name="msg_cannot_create_view">غير قادر على صنع مظهر: %s</string>
+    <string name="err_no_attr_adapter">No attribute adapter implementation found for %s</string>
+    <string name="msg_view_not_supported">View %s is not supported currently.</string>
 </resources>
