--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -358,4 +358,6 @@
     <string name="msg_swipe_for_output">@@বিল্ড আউটপুট@@ এর জন্য উপরে সোয়াইপ করুন।</string>
     <string name="idepref_editor_useSoftTabs_title">সফ্ট ট্যাব ব্যবহার করুন</string>
     <string name="idepref_editor_useSoftTabs_summary">ট্যাব অক্ষরের (\\t) পরিবর্তে স্পেস ব্যবহার করবেন কিনা তা বেছে নিন।</string>
+    <string name="btn_sponsor">স্পন্সর</string>
+    <string name="btn_docs">ডকুমেন্টেশন</string>
 </resources>
