Add new strings

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -364,4 +364,48 @@
   <string name="btn_close">Fechar</string>
   <string name="msg_ignore_case">Ignorar o caso</string>
   <string name="msg_use_regex">Usar regex</string>
+  <string name="idepref_buildnrun_summary">Configurar o Gradle build</string>
+  <string name="configure">Configurar</string>
+  <string name="about">Sobre</string>
+  <string name="idepref_github_summary">AndroidIDE é de código aberto!</string>
+  <string name="idepref_channel_summary">Inscreva-se para receber as últimas atualizações.</string>
+  <string name="idepref_group_summary">Discuta aqui recursos, bugs e melhorias.</string>
+  <string name="idepref_changelog_summary">O que há de novo nesta versão?</string>
+  <string name="idepref_about_summary">Mais sobre o AndroidIDE.</string>
+  <string name="idepref_general_summary">Configuração geral da IDE.</string>
+  <string name="idepref_editor_summary">Configurar o editor.</string>
+  <string name="xml">XML</string>
+  <string name="idepref_xml_trimFinalNewLine_title">Retirar linha final</string>
+  <string name="idepref_xml_insertFinalNewLine_title">Inserir linha final</string>
+  <string name="idepref_xml_trimFinalNewLine_summary">Remover linha extra vazia no final do arquivo</string>
+  <string name="idepref_xml_insertFinalNewLine_summary">Insere uma nova linha vazia no final do arquivo.</string>
+  <string name="idepref_xml_splitAttributes_title">Atributos divididos</string>
+  <string name="idepref_xml_splitAttributes_summary">Atributos de formato na nova linha</string>
+  <string name="idepref_xml_joinCDataLines_title">Junte-se às linhas CDATA</string>
+  <string name="idepref_xml_joinCDataLines_summary">Normalizar o conteúdo dentro da CDATA.</string>
+  <string name="idepref_xml_joinComment_title">Juntar linhas de comentário</string>
+  <string name="idepref_xml_joinComment_summary">Normalizar o conteúdo nos comentários.</string>
+  <string name="idepref_xml_joinContent_title">Juntar linhas de conteúdo</string>
+  <string name="idepref_xml_joinContent_summary">Normalizar conteúdo dentro de elementos.</string>
+  <string name="idepref_xml_spaceBeforeEmptyClose_title">Espaço antes de fechar a tag</string>
+  <string name="idepref_xml_spaceBeforeEmptyClose_summary">Insira o espaço em branco antes do colchete final da tag de fechamento.</string>
+  <string name="idepref_xml_preserveEmptyContent_title">Preservar conteúdo vazio</string>
+  <string name="idepref_xml_preserveEmptyContent_summary">Apresentar conteúdo vazio dentro de elementos (espaços em branco, novas linhas, guias, etc).</string>
+  <string name="idepref_xml_preserveAttrLineBreaks_title">Preservar quebras de linha de atributos</string>
+  <string name="idepref_xml_preserveAttrLineBreaks_summary">Preservar quebras de linha entre atributos.</string>
+  <string name="idepref_xml_closingBrackNewLine_title">Fechar colchete na nova linha</string>
+  <string name="idepref_xml_closingBrackNewLine_summary">Coloque o colchete de fechamento em uma nova linha.</string>
+  <string name="idepref_xml_trimTrailingWs_title">Aparar espaço em branco à direita</string>
+  <string name="idepref_xml_trimTrailingWs_summary">Remova os espaços em branco extras no final das linhas.</string>
+  <string name="idepref_editor_formatterOptions">Opções do formatador</string>
+  <string name="idepref_maxLineWidth_title">Largura máxima da linha</string>
+  <string name="idepref_maxLineWidth_summary">O número máximo de caracteres que uma linha deve ter.</string>
+  <string name="idepref_splitAttrIndentSize_title">Dividir o tamanho do recuo dos atributos</string>
+  <string name="idepref_splitAttrIndentSize_summary">O número de espaços a serem indexados para atributos divididos.</string>
+  <string name="idepref_preservedNewLines_title">Novas linhas preservadas</string>
+  <string name="idepref_preservedNewLines_summary">O número máximo de quebras de linha contínuas que devem ser preservadas.</string>
+  <string name="idepref_emptyElements_title">Comportamento de elementos vazios</string>
+  <string name="idepref_emptyElements_summary">Escolha o comportamento de formatação para elementos vazios.</string>
+  <string name="xml_formatting_options">Opções de formatação XML</string>
+  <string name="xml_formatting_options_summary">Configurar o formatador XML</string
 </resources>
